2009-03-04  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c (target_toggled_cb),
	(create_screenshot_frame), (main): disable the delay option
	when taking a screenshot of an user selected area (#573939).

2009-02-27  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c (target_toggled_cb),
	(create_screenshot_frame), (finish_prepare_screenshot),
	(async_existence_job_free), (check_file_done), (find_rectangle),
	(prepare_screenshot), (main):
	* screenshot-utils.c (select_area_button_press),
	(select_area_button_release), (select_area_motion_notify),
	(select_area_filter), (screenshot_select_area),
	(screenshot_get_pixbuf):
	* screenshot-utils.h: add support for taking a screenshot of an
	user-defined selection.
	Patch by Vincent Untz, bug #155061.

2009-02-24  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=381135
	http://bugzilla.gnome.org/show_bug.cgi?id=166485

	* screenshot-utils.c (screenshot_get_pixbuf): If we are in a
	multi-monitor setup that is not rectangular (for example, if it is
	L-shaped due to monitors of different resolutions), we need to
	blank out the "invisible" areas from the rectangular root window.
	Otherwise, the screenshot will contain content that the user
	cannot actually see.  Call a helper function to blank out these areas.
	(mask_monitors): New helper function.

	* screenshot-utils.c (screenshot_get_pixbuf): Don't try to shape
	the root window.  Patch by Hal Ashburner <hal@ashburner.info>

2009-02-24  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am: add gthread CFLAGS and LIBS.
	* gnome-screenshot.c (main): initialize threads at startup,
	so that we can be sure to use them and not the idle fallback when
	doing async transfers.

2009-01-10  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c (set_recent_entry), (save_callback):
	Add newly saved files to GtkRecentManager (#567205).

2008-11-24  Emmanuele Bassi  <ebassi@gnome.org>
